added the first blog

--- a/latest.html
+++ b/latest.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>this will be latest</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>my first websites</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit fugit voluptatibus rem exercitationem ipsa molestias omnis dolore, quasi impedit, doloribus sequi veniam dignissimos quidem debitis aperiam nesciunt deleniti laboriosam maiores.</p>
+    </div>
 </body>
 </html>
