--- a/latest.html
+++ b/latest.html
@@ -11,5 +11,13 @@
         <h3>my first websites</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit fugit voluptatibus rem exercitationem ipsa molestias omnis dolore, quasi impedit, doloribus sequi veniam dignissimos quidem debitis aperiam nesciunt deleniti laboriosam maiores.</p>
     </div>
+    <div>
+        <h3>my second websites</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit fugit voluptatibus rem exercitationem ipsa molestias omnis dolore, quasi impedit, doloribus sequi veniam dignissimos quidem debitis aperiam nesciunt deleniti laboriosam maiores.</p>
+    </div>
+    <div>
+        <h3>my third websites</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit fugit voluptatibus rem exercitationem ipsa molestias omnis dolore, quasi impedit, doloribus sequi veniam dignissimos quidem debitis aperiam nesciunt deleniti laboriosam maiores.</p>
+    </div>
 </body>
 </html>
