added a list to push code

--- a/latest.html
+++ b/latest.html
@@ -19,5 +19,13 @@
         <h3>my third websites</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit fugit voluptatibus rem exercitationem ipsa molestias omnis dolore, quasi impedit, doloribus sequi veniam dignissimos quidem debitis aperiam nesciunt deleniti laboriosam maiores.</p>
     </div>
+    <div>
+        <h3>how to push incrimental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
